<resources>

    <string name="app_name">BopIt-31-08</string>
    <string name="app_author">Maybomi Tobar, maybomi.unu@gmail.com</string>

    <!--Home Activity-->

    <!--Button-->
    <string name="playButtonTextHome">Jugar</string>
    <string name="aboutButtonTextHome">Acerca De</string>
    <string name="preferencesButtonTextHome">Preferencias</string>
    <string name="restartSettingsButtonTextHome">Restablecer configuraciones predeterminadas</string>

    <!--About Activity-->

    <!--Text View-->
    <string name="creatorTextView">Creado por: Maybomi Tobar.</string>
    <string name="projectInfoTextView">Esto es un proyecto de el módulo
        de Programación de Dispositivos Móviles.</string>
    <string name="title_activity_preferences">PreferencesActivity</string>

    <!--Preferences Activity-->
    <string name="nameEditText">Ingrese su nombre de usuario.</string>>
    <string name="scoreTextView">0</string>

    <!-- Preference Titles -->
    <string name="game_header">Opciones de juego</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Game Preferences -->
    <string name="highscore_title">Puntaje Máximo</string>
    <string name="thresholdDI_title">Número de aciertos para incrementar dificultad</string>
    <string name="speedscalar_title">Factor multiplicando a la velocidad</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!--Game Activity-->

    <!--Text View-->
    <string name="scoreTextViewG">Puntaje: </string>

    <!--Code-->
    <string name="winMessage">Ganaste</string>
    <string name="loseMessage">Perdíste</string>
    <string name="correctActionMessage">¡Bien Hecho!</string>
    <string name="BotIpPressInstruct">Presiona Bop It</string>
    <string name="SwipeInstruct">Desliza</string>
    <string name="ShakeInstruct">Agita</string>
    <string name="HighScoreDialogTitle">Nuevo puntaje más alto</string>
    <string name="ScoreDialogTitle">El puntaje es</string>

</resources>
