<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/aboutButtonHome"
        android:layout_width="126dp"
        android:layout_height="66dp"
        android:backgroundTint="@color/red"
        android:text="@string/aboutButtonTextHome"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.658"
        tools:text="@string/aboutButtonTextHome" />

    <Button
        android:id="@+id/playButtonHome"
        android:layout_width="101dp"
        android:layout_height="67dp"
        android:backgroundTint="@color/red"
        android:text="@string/playButtonTextHome"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.543"
        tools:text="@string/playButtonTextHome" />

    <Button
        android:id="@+id/preferencesButtonHome"
        android:layout_width="146dp"
        android:layout_height="61dp"
        android:backgroundTint="@color/red"
        android:text="@string/preferencesButtonTextHome"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.773"
        tools:text="@string/preferencesButtonTextHome" />

    <Button
        android:id="@+id/restartSettingsButtonHome"
        android:layout_width="317dp"
        android:layout_height="98dp"
        android:backgroundTint="@color/red"
        android:text="@string/restartSettingsButtonTextHome"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954"
        tools:text="@string/restartSettingsButtonTextHome" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="252dp"
        android:layout_height="282dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.192"
        app:srcCompat="@drawable/mslogo"
        tools:srcCompat="@drawable/mslogo" />

</androidx.constraintlayout.widget.ConstraintLayout>